[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gwalk"
authors = [{ name = "Zero Kwok", email = "zero.kwok@foxmail.com" }]
description = "gwalk 是一系列用于管理 Git 仓库的命令行小工具，帮助开发者对大批量的 Git 仓库进行日常维护。"
keywords = ["git", "tools"]
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "GitPython",
    "termcolor",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "gwalk.gwalk.projectVersion"}

[project.urls]
Homepage = "https://github.com/ZeroKwok/gwalk"
Issues = "https://github.com/ZeroKwok/gwalk/issues"

[project.scripts]
gl = "gwalk.gl:main"
gcp = "gwalk.gcp:main"
gwalk = "gwalk.gwalk:main"
gapply = "gwalk.gapply:main"
